# pysnirf2

./: .coveragerc  .gitignore  CITATION.cff  README.md  locations.txt  pyproject.toml  pysnirf2.py  requirements.txt  setup.cfg  setup.py  snirf_specification_retrieved_26_12_24.txt  validate_sketch.py
.github/workflows/: lazydocs.yml  release.yml  test.yml
docs/: README.md  pysnirf2.md
pysnirf2/: __init__.py  __version__.py  h5pycopy.py  pysnirf2.py
snirf/: __init__.py  __version__.py  pysnirf2.py
src/: __init__.py  pysnirf2.py
tests/: subjA_run01.snirf  test  test.py  testfile  tests.py
tests/data/: Simple_Probe_measList.snirf  Simple_Probe_measLists.snirf  sub-A_task-test_run-1.snirf  subjA_run01.snirf  subjA_run02.snirf  subjA_run03.snirf  v120dev-Simple_Probe_measLists.snirf  v120dev-sub-A_task-test_run-1.snirf
tests/wd/: subjA_run01_created
