[metadata]
name = pysnirf2-sstucker
version = 0.0.1
author = Stephen Tucker
author_email = sstucker@bu.edu
description = Dynamically generated SNIRF file format interface and validator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BUNPC/pysnirf2
project_urls =
    Bug Tracker = https://github.com/BUNPC/pysnirf2/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src